fix: gaps and margine bottom in section CTA

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -409,21 +409,26 @@ main {
 /* CTA */
 
 .cta {
-  background: url("assets/img/img-compressed/bg-forest.png"),
+  background-image: url("assets/img/img-compressed/bg-forest.png"),
               url("assets/img/img-compressed/bg-snow.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 60px 0;
+  padding: 120px 0;
 }
 
 .cta__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
   text-align: center;
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 7px;
 }
 
 .timer {
@@ -438,6 +443,7 @@ main {
   align-items: center;
   background: var(--static-white-40);
   position: relative;
+  margin-bottom: 60px;
 }
 
 .time-box {
